<resources>
    <string name="app_name">BitFit</string>
    <string name="you_need_to_input_data_for_today">You need to input data for today</string>
    <string name="how_much_did_you_sleep_last_night">How much did you sleep last night?</string>
    <string name="how_did_you_feel_this_am">How did you feel this AM</string>
    <string name="any_other_notes">Any other notes?</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="hours_slept">Slept %d hours</string>
    <string name="feeling">Feeling %d/10</string>
    <string name="average_hours_of_sleep">Avarage hours of sleep %d</string>
    <string name="average_feeling">Average feeling %d/10</string>
    <string name="clear_data">Clear Data</string>
</resources>