<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/custom1"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/metrics_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_hours_of_sleep"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/metrics_feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/average_feeling"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clear_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/clear_data" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

</LinearLayout>